Fix alignment in navbar

--- a/style.css
+++ b/style.css
@@ -9,16 +9,17 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-.top {
+.top,.footer {
   background-color: #1f2937;
 }
 
 #header-logo {
   font-size: 24px;
-  color: #f9faf8
+  color: #f9faf8;
+  font-weight: bold;
 }
 
-.header-link, .content-sub { 
+.header-link, .content-sub, .copyright { 
   font-size: 18px;
   color: #e5e7eb;
   margin: 10px;
@@ -26,7 +27,10 @@ body {
 
 .navbar {
   display: flex;
+  justify-content: space-around;
   flex-direction: row;
+  align-items: center;
+  margin: 8px 15%;
 }
 
 ul {
@@ -38,8 +42,11 @@ ul {
 .navbar-left, .navbar-right{
   display: flex;
   width: 50%;
-  justify-content: center;
   align-items: center;
+}
+
+.navbar-right {
+  justify-content: flex-end;
 }
 
 h1{
